--- a/app/views/uni/fill-in-proof-details.html
+++ b/app/views/uni/fill-in-proof-details.html
@@ -60,7 +60,7 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading govuk-!-font-size-36">
-            Coure details
+            Course details
           </h1>
         </legend>
         <div class="govuk-form-group">
